<resources>
    <string name="app_name">CareerPartner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  OnBoarding  -->
    <string name="boarding_title_one">Your Career, Your Vision</string>"
    <string name="boarding_content_one">
        Turn your career dreams into reality by discovering the path that aligns with your strengths and passions.
    </string>
    <string name="boarding_title_two">Grow Your Skills, Reach Your Dream Career</string>
    <string name="boarding_content_two">
        Receive personalized job and learning recommendations for your career goals. Build your future one step at a time.
    </string>
    <string name="boarding_title_three">Discover Internships &amp; Volunteer Opportunities</string>
    <string name="boarding_content_three">
        Stay updated with curated, real-world experiences to boost your career from trusted companies and organizations.
    </string>
    <string name="boarding_first_button">Get Started</string>
    <string name="boarding_second_button">Explore Your Path</string>
    <string name="boarding_third_button">Browse Opportunities</string>
    <string name="auth_choice_content">Welcome and Join Now to Start Your Journey</string>

    <!--  Card Template  -->
    <string name="title_card">Data Engineer</string>
    <string name="subtitle_card">Create Scalable Data Infrastructure</string>
    <string name="view_more">View more</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. At purus tellus arcu sit nibh consectetur.</string>

    <!--  Menu  -->
    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_profile">Profile</string>

    <!-- Finish Up Account -->
    <string name="finish_up_title">Finish Up Your Account</string>
    <string name="education_title">Education</string>
    <string name="interests_title">Interests</string>
    <string name="skills_title">Skills</string>
    <string name="experience_title">Experience</string>

    <string name="select_your_last_education">We Need Your All Education Details</string>
    <string name="select_your_interests">What\'s Your Interests ?</string>
    <string name="select_your_skills">What\'s Your Skills ?</string>
    <string name="select_your_experience">Let\'s Talk About Your Experience</string>"
    <string name="experience_subtitle">Share any activity, project, or role that helped you grow at school, work, or, in your community.</string>

    <string name="welcome_aboard">You\'re In! Welcome Aboard</string>
    <string name="sub_aboard">Start building your future, we\'ll guide you every step of the way.</string>

    <!-- Home Fragment -->
    <string name="hello_user">Hello, Jonathan Lim</string>
    <string name="hello_user_sub">Your future career Frontend Engineer</string>
    <string name="card_home_title_career">Build Your Career</string>
    <string name="card_home_module_title_career">Modules You Need to Learn</string>
    <string name="card_home_module_career">CSS Tutorial 0 Full Course for Begineers</string>

    <string name="home_internships_title">Internships Just for You</string>
    <string name="home_volunteer_title">Fresh Volunteer Openings</string>

    <string name="card_title_content">Data Engineer</string>
    <string name="card_subtitle_content">Create Scalable Data Infrastructure</string>
    <string name="card_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. At purus tellus arcu sit nibh consectetur.</string>

    <!-- Discover Fragment -->
    <string name="discover_title">Boost Your Career Journey</string>
    <string name="discover_sub_title">Find the right internships, meaningful volunteer work, and essential skills to move forward.</string>

    <!-- My Career -->
    <string name="my_career_goals">Goals Career</string>
    <string name="my_career_path">Path to Your Dream Career</string>
    <string name="my_career_path_title">HTML Tutorial - Full Course for Beginners</string>
    <string name="my_career_path_source">freeCodeCamp</string>


    <!-- Education -->
    <string name="education_header">Education History</string>"
    <string name="edit">Edit</string>
    <string name="education">Bachelor of Computer Science</string>
    <string name="education_subtitle">IPB University</string>
    <string name="education_year">2019 – 2023</string>

    <!-- Projects -->
    <string name="project_title">Love Your Pets Web</string>
    <string name="project_year">2024</string>

    <!-- Support and Help -->
    <string name="contact_support_title">Contact Support</string>
    <string name="contact_support_subtitle">Need technical assistance or have a question?</string>
    <string name="contact_support_sub_subtitle">Our team is here to help.</string>
    <string name="contact_support_email">Email: support@careermate.id</string>
    <string name="contact_support_phone">Phone: +62 87861658909</string>

    <string name="faq_title">Frequently Asked Question (FAQ)</string>
    <string name="faq_one">How do i change my selected career path ?</string>
    <string name="faq_one_desc">To change your selected career path, go to the Settings menu and tap on Career Preferences. From there, choose Edit Career Path and select a new option that aligns with your goals.</string>
    <string name="faq_two">Can i view detailed information about internships and volunteer ?</string>
    <string name="faq_two_desc">To change your selected career path, go to the Settings menu and tap on Career Preferences. From there, choose Edit Career Path and select a new option that aligns with your goals.</string>
    <string name="faq_three">Is support available through a Live Chat Bot ?</string>"
    <string name="faq_three_desc">To change your selected career path, go to the Settings menu and tap on Career Preferences. From there, choose Edit Career Path and select a new option that aligns with your goals.</string>

    <!-- Chat Bot -->
    <string name="title_chat_bot">Ask Yoca</string>
    <string name="subtitle_chat_bot">YOCA is here to help you explore and discover more about career guidance.</string>
</resources>