<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvFieldStudy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/education_subtitle"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvStudyStartYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/education_year"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvFieldStudy"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/abu"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvStudyStartYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>