<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="24dp"
    >
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/ivCardDiscover"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:src="@drawable/dummyimg"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvTitleCardDiscover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_card"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toEndOf="@id/ivCardDiscover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tvSubTitleCardDiscover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_card"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="@id/tvTitleCardDiscover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleCardDiscover"
            />

        <TextView
            android:id="@+id/tvContentCardDiscover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textStyle="normal"
            android:textSize="12sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitleCardDiscover"
            app:layout_constraintStart_toStartOf="@+id/tvSubTitleCardDiscover"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvContentCardDiscover"
            app:layout_constraintEnd_toEndOf="parent"
            />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>