<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="4dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        >

        <ImageView
            android:id="@+id/ivCardHome"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/dummyimg"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvTitleCardHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_card"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivCardHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvSubTitleCardHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_card"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleCardHome"
            app:layout_constraintStart_toStartOf="@+id/tvTitleCardHome"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvViewMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitleCardHome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSubTitleCardHome"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>